Updated resume, fixed image formatting on narrow sreen sizes

--- a/css/pictures.scss
+++ b/css/pictures.scss
@@ -107,6 +107,9 @@ $small-logo-picture-size: $logo-picture-size - 25px;
   @media screen and (max-width: $bootstrap-column-collapse-width) {
     height: 70px;
   }
+  @media screen and (max-width: 350px) {
+    height: 50px !important;
+  }
 }
 
 // OTHER PICTURES //
@@ -125,9 +128,20 @@ $small-logo-picture-size: $logo-picture-size - 25px;
   object-fit: cover;
 }
 
+.cornell-racing-picture {
+  height: 65px;
+  margin-top: 20px;
+  @media screen and (max-width: 350px) {
+    height: 50px !important;
+  }
+}
+
 .sense-picture {
   height: 200px;
   @media screen and (max-width: $bootstrap-column-collapse-width) {
-    height: 150px;
+    height: 125px;
+  }
+  @media screen and (max-width: 350px) {
+    height: 100px !important;
   }
 }
